--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -20,6 +20,11 @@
 <div class="uk-section uk-section-secondary uk-light">
   <div class="uk-container">
     <h2 class="title"><%= @recipe.title %>
+      <% if current_user == @recipe.user %>
+        <%= link_to edit_recipe_path(@recipe), class: "uk-button" do %>
+          <i uk-tooltip="<%= t('recipe.action.edit') %>" class="far fa-edit fa-2x"></i>
+        <% end%>
+      <% end %>
     </h2>
     <!--    <div style="display: inline-block">-->
 
