--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,6 +4,11 @@
   <% end %>
   <div class="uk-navbar-right uk-nav">
     <ul class="uk-navbar-nav uk-visible@s">
+      <li class="<%= current_page_class?(search_path) %>">
+        <%= link_to search_path do %>
+          <span uk-icon="icon: search"></span>
+        <% end %>
+      </li>
       <li>
         <a href="#">
           <span uk-icon="icon: user"></span>
@@ -79,16 +84,11 @@
   <div class="uk-offcanvas-bar">
     <button class="uk-offcanvas-close" type="button" uk-close></button>
     <ul class="uk-nav uk-nav-default">
-      <li class="<%= current_page_class?(search_path) %>">
-        <%= link_to search_path do %>
-          <span uk-icon="icon: search"></span> <%= t('search.title') %>
-        <% end %>
-      </li>
       <li>
-        <a href="#">
+        <span>
           <span uk-icon="icon: happy"></span>
           <%= t('navbar.producers') %>
-        </a>
+        </span>
         <ul class="uk-nav-sub">
           <li class="<%= current_page_class?(unauthenticated_producer_root_path) %>">
             <%= link_to unauthenticated_producer_root_path do %>
@@ -97,11 +97,19 @@
           </li>
         </ul>
       </li>
+      <% unless user_signed_in? %>
+        <li class="<%= current_page_class?(new_user_session_path) %>">
+          <%= link_to new_user_session_path do %>
+            <span uk-icon="icon: user"> </span>
+            <%= t('navbar.sign_in') %>
+          <% end %>
+        </li>
+      <% end %>
     </ul>
     <div class="uk-position-bottom uk-padding">
       <ul class="uk-nav uk-nav-default ">
         <li>
-          <%= link_to landing_pages_path do %>
+        <%= link_to landing_pages_path do %>
             <%= t('navbar.who_we_are') %>
           <% end %>
         </li>
