--- a/app/views/shopping_lists/_shopping_list_ingredient_fields.html.erb
+++ b/app/views/shopping_lists/_shopping_list_ingredient_fields.html.erb
@@ -16,7 +16,13 @@
           <%= ff.input :value, label: t("recipe.title.quantity_value") %>
         </div>
         <div class="uk-width-1-2 uk-margin-small-top">
-          <%= ff.input :quantity_type, label: "Type", as: :select, collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a %>
+
+          <%= ff.input :quantity_type, :label => "Type", collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+            slimselect: true,
+            slimselectNoResult: t('slimselect.ustensils.no_result'),
+            slimselectSearchPlaceholder: t('slimselect.ustensils.search_placeholder'),
+            slimselectPlaceholder: t('slimselect.ustensils.placeholder'),
+          }, defaults: {input_class: ""} %>
         </div>
       <% end %>
     </div>
