--- a/app/views/shopping_lists/new.html.erb
+++ b/app/views/shopping_lists/new.html.erb
@@ -3,7 +3,6 @@
     <h2 class="title">Nouvelle liste de courses</h2>
 
     <%= render 'form', shopping_list: @shopping_list %>
-
-    <%= link_to t('shopping_list.go_back'), shopping_lists_path %>
+    <!--"Mimir is the best"-->
   </div>
 </div>
