Reload dans création de recette & quelques issues sur le front (#406)
* fix: a lot of fix on the UI

* fix: connection button accessible only if you're not sign in

* fix: connection error

* fix: traduction & changing wording

* fix: fixing some issues on the front in shopping list

* fix: preventing ingredients nil when updating the shopping list

* fix: useful comment added

* fix: wording in traduction

* fix: front & reloading new recipe

* fix: wording in the variable

* fix: duplication of a div

* fix: translation in recipe

* fix: slimselect fonctionnal

* fix: routing when deleting a recipe

* fix: deleting my account

--- a/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
@@ -26,7 +26,15 @@
             <%= ff.input :value, label: t("recipe.title.quantity_value") %>
           </div>
           <div class="uk-width-1-2">
-            <%= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select, collection: QuantityType.all.map {|v| [v.name, v.id]}.to_a, input_html: {class: "uk-select"} %>
+            <%#= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select, collection: QuantityType.all.map {|v| [v.name, v.id]}.to_a, input_html: {class: "uk-select"} %>
+
+            <%= ff.input :quantity_type, :label => t("recipe.title.quantity_type"), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+              slimselect: true,
+              slimselectNoResult: t('slimselect.quantity_type.no_result'),
+              slimselectSearchPlaceholder: t('slimselect.quantity_type.placeholder'),
+              slimselectPlaceholder: t('slimselect.quantity_type.placeholder'),
+            }, defaults: {input_class: ""} %>
+
           </div>
         <% end %>
       <% else %>
@@ -35,11 +43,8 @@
             <%= ff.input :value, label: t("recipe.title.quantity_value") %>
           </div>
           <div class="uk-width-1-2">
-            <%= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select,
-                         collection: QuantityType.all.map {|v| [v.name, v.id]}.to_a,
-                         input_html: {class: "uk-select"}, selected: f.object.recipe_quantity.quantity_type.id %>
-
-            <%= ff.input :quantity_type, :label => t("recipe.title.ingredient "), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+            
+            <%= ff.input :quantity_type, :label => t("recipe.title.quantity_type"), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
               slimselect: true,
               slimselectNoResult: t('slimselect.quantity_type.no_result'),
               slimselectSearchPlaceholder: t('slimselect.quantity_type.placeholder'),
