--- a/app/views/shopping_lists/index.html.erb
+++ b/app/views/shopping_lists/index.html.erb
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
 <div class="uk-container uk-padding">
-  <h2 class="title"><%= t("shopping_list.title") %></h2>
+  <h2 class="title"><%= t('shopping_list.title') %></h2>
 
   <%= link_to t('shopping_list.new'), new_shopping_list_path, class: "uk-button uk-button-default uk-width-1 uk-margin-bottom" %>
   <div class="uk-grid-small uk-child-width-1@s uk-child-width-1-4@m" uk-grid>
