--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -42,7 +42,7 @@
 
 
     <div class="uk-margin-small uk-text-center">
-      <%= link_to t('.cancel_my_account'), registration_path(resource_name), data: {confirm: t('are_you_sure')}, method: :delete, class: "uk-text-small" %>
+      <%= mail_to "recipyhq@gmail.com", t('.cancel_my_account'), subject: t('delete.my_account')%>
     </div>
 
 
