Issue sur le front (#409)
* fix: a lot of fix on the UI

* fix: connection button accessible only if you're not sign in

* fix: connection error

* fix: traduction & changing wording

* fix: fixing some issues on the front in shopping list

* fix: preventing ingredients nil when updating the shopping list

* fix: useful comment added

* fix: wording in traduction

* fix: front & reloading new recipe

* fix: wording in the variable

* fix: duplication of a div

* fix: translation in recipe

* fix: slimselect fonctionnal

* fix: routing when deleting a recipe

* fix: deleting my account

* fix: traduction adding ingredient

* fix: traduction adding ingredient

* fix: translation in producer text & routing

--- a/app/views/producer/home/new.html.erb
+++ b/app/views/producer/home/new.html.erb
@@ -1,5 +1,5 @@
 <div class="uk-container uk-padding">
-    <h2 class="title"><%= t('producer.new.welcome') %></h2>
+    <h2 class="title"><%= t('producer.new.welcome_create') %></h2>
 
     <%= simple_form_for(@user, url: createproducer_path) do |f| %>
 
