--- a/app/views/layouts/mailer.mjml
+++ b/app/views/layouts/mailer.mjml
@@ -1,50 +1,93 @@
 <mjml>
+
     <mj-head>
-        <mj-style>
-            * {
-                font-family: "Helvetica";
-            }
-            .sentence {
-                font-size: 1em;
-                color: #3c3c3c;
-            }
-            .button {
-                text-align: center;
-                font-size: 1.2em;
-                color: #F3F3F3;
-                padding: 10px;
-                text-decoration: none;
-                border-radius: 20px;
-                background-color: #3498db;
-                font-weight: "bold";
-            }
-        </mj-style>
+      <mj-attributes>
+          <mj-button align="left" font-family="Helvetica" background-color="#FF9A3B" color="white" />
+      </mj-attributes>
+      <mj-style inline="inline">
+        .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: .5rem;
+        font-family: inherit;
+        font-weight: 500;
+        line-height: 1.2;
+        color: inherit;
+        }
+        .h1, h1 {
+        font-size: 2.5rem;
+        }
+        .h2, h2 {
+        font-size: 2rem;
+        }
+        .h3, h3 {
+        font-size: 1.75rem;
+        }
+        .h4, h4 {
+        font-size: 1.5rem;
+        }
+        .h5, h5 {
+        font-size: 1.25rem;
+        }
+        .h6, h6 {
+        font-size: 1rem;
+        }
+        .body {
+        margin: 0;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        text-align: left;
+        background-color: red;
+        }
+        p {
+             margin-top: 0;
+          margin-bottom: 1rem;
+        }
+        .grey {
+            color: #474747;
+        }
+        a {
+        	color: #FF9A3B;
+        }
+      </mj-style>
     </mj-head>
-    <mj-body background-color="#FFFFFF">
-        <mj-section padding-bottom="0px" background-color="#FBFBFB">
-            <mj-column width="100%">
-                <mj-button font-size="20px" color="#FBFBFB" align="left" font-family="Helvetica" border-radius="2px" href="#" background-color="#FF9A3B">Recipy</mj-button>
-                <mj-divider horizontal-spacing="0" vertical-spacing="0" padding-top="20" padding-bottom="0px" padding-left="0px" padding-right="0px" border-width="1px" border-color="#F3F3F3"></mj-divider>
-            </mj-column>
-        </mj-section>
-        <% if content_for?(:title) %>
-            <mj-section background-color="#3c3c3c">
-                <mj-text align="center" color="#fbfbfb" class="title">
-                    <h2><%= yield(:title) %></h2>
-                </mj-text>
-            </mj-section>
-        <% end %>
-        <mj-section background="#FFFFFF">
-            <%= yield %>
-        </mj-section>
-        <mj-section background-color="#FBFBFB">
-            <mj-column>
-                <mj-text align="center" class="sentence">Stay in touch!</mj-text>
-                <mj-social mode="horizontal">
-                    <mj-social-element name="twitter"></mj-social-element>
-                    <mj-social-element name="facebook"></mj-social-element>
-                </mj-social>
-            </mj-column>
-        </mj-section>
+    <mj-body background-color="#eee" css-class="body">
+
+      <mj-section>
+
+          <mj-column>
+            <mj-text color="#FF9A3B">
+              <h1>Recipy</h1>
+            </mj-text>
+          </mj-column>
+
+      </mj-section>
+
+      <mj-section background-color="#fff">
+
+        <mj-column>
+          <% if content_for?(:title) %>
+            <mj-text align="left">
+              <h3><%= yield(:title) %></h3>
+            </mj-text>
+          <% end %>
+          <%= yield %>
+          <mj-text>
+              <p>L'équipe Recipy</p>
+          </mj-text>
+        </mj-column>
+      </mj-section>
+      <mj-section>
+
+          <mj-column>
+            <mj-text>
+              <p class="grey">Envoyé avec ♥ par Recipy</p>
+              <p class="grey">Recipy, France</p>
+            </mj-text>
+          </mj-column>
+
+      </mj-section>
     </mj-body>
-</mjml>
+
+  </mjml>
