--- a/app/views/epitech_exp/index.html.erb
+++ b/app/views/epitech_exp/index.html.erb
@@ -1,4 +1,9 @@
-<h1>Générez votre planning pour le reste de la semaine et recevez le par mail</h1>
+<div class="uk-cover-container uk-height-large">
+    <img src="<%= asset_path 'wallpapers/home_blured.jpg' %>" alt="cover" uk-cover>
+    <div class="uk-position-cover uk-flex uk-flex-center uk-flex-column uk-flex-middle">
+        <h1 class="title title-light uk-padding uk-padding-remove-bottom">Générez votre planning pour le reste de la semaine et recevez le par mail</h1>
+    </div>
+</div>
 <%= simple_form_for :meal_plan_infos,
                     url: epiexp_create_meal_plan_path,
                     :method => :post,
@@ -9,8 +14,39 @@
                         wrapper_class: "uk-width-1-1",
                         required: false
                     } do |f| %>
-    <%= f.input :email, :placeholder => 'Email', as: :string, input_html: { value: @search_query }, wrapper_class: "uk-width-2-3@s", label: false %>
-    <div class="uk-width-1-3@s">
-        <%= f.button :submit, 'Générer un planing', class: "uk-width-1-1" %>
+    <%= f.input :diet, :label => "Votre régime",
+                default: 'aucun',
+                selected: params['diet'],
+                collection: [['Aucun', 'aucun'], ['Vegan', 'vegan'], ['Végétarien', 'vegetarian']],
+                as: :select,
+                input_class: false,
+                wrapper_class: "uk-width-1-3@m uk-width-1-1 uk-padding-small" %>
+    <%= f.input :allergens, :label => 'Vos allergènes',
+                selected: params['allergens'],
+                collection: AllergenTag.order(:name).all.map {|v| [t('allergen_list.' + v.name), v.id]}.to_a,
+                as: :select,
+                input_class: false,
+                wrapper_class: "uk-width-1-3@m uk-width-1-1 uk-padding-small",
+                input_html: {
+                  multiple: true,
+                  slimselect: true,
+                  slimselectNoResult: t('slimselect.allergens.no_result'),
+                  slimselectSearchPlaceholder: t('slimselect.allergens.search_placeholder'),
+                }, defaults: {input_class: ""} %>
+    <%= f.input :no_like_ingredients, :label => "Ingrédients que vous n'aimez pas",
+                collection: Ingredient.order(:name).all.map {|v| [v.name, v.id]}.to_a,
+                selected: params['no_like_ingredients'],
+                as: :select,
+                input_class: false,
+                wrapper_class: "uk-width-1-3@m uk-width-1-1 uk-padding-small",
+                input_html: {
+                  multiple: true,
+                  slimselect: true,
+                  slimselectNoResult: t('slimselect.like_unlike_ingredients.no_result'),
+                  slimselectSearchPlaceholder: t('slimselect.like_unlike_ingredients.search_placeholder'),
+                }, defaults: {input_class: ""} %>
+    <%= f.input :email, selected: params['email'], :placeholder => 'Adresse email', as: :email, wrapper_class: "uk-width-2-3@s uk-width-1-1 uk-padding-small", label: false %>
+    <div class="uk-width-1-3@s uk-padding-small">
+        <%= f.button :submit, 'Générer un planing', class: "uk-button-primary uk-width-1-1" %>
     </div>
 <% end %>
