fix: edit ingre quantity_type

--- a/app/assets/stylesheets/recipe_form.css
+++ b/app/assets/stylesheets/recipe_form.css
@@ -31,6 +31,10 @@
   margin: 14px 12px;
 }
 
+.ss-value {
+  background-color: #FF9A3B !important;
+}
+
 /*.ss-value {*/
 /*  height: 26px;*/
 /*}*/
