--- a/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
+++ b/app/views/recipes/_edit_recipe_ingredient_fields.html.erb
@@ -28,7 +28,7 @@
           <div class="uk-width-1-2">
             <%#= ff.input :quantity_type, label: t("recipe.title.quantity_type"), as: :select, collection: QuantityType.all.map {|v| [v.name, v.id]}.to_a, input_html: {class: "uk-select"} %>
 
-            <%= ff.input :quantity_type, :label => t("recipe.title.quantity_type"), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+            <%= ff.input :quantity_type, :label => t("recipe.title.quantity_type"), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a.unshift([t('recipe.title.no_quantity_type'), -1]), as: :select, :include_blank => true, input_class: false, input_html: {
               slimselect: true,
               slimselectNoResult: t('slimselect.quantity_type.no_result'),
               slimselectSearchPlaceholder: t('slimselect.quantity_type.placeholder'),
@@ -43,8 +43,8 @@
             <%= ff.input :value, label: t("recipe.title.quantity_value") %>
           </div>
           <div class="uk-width-1-2">
-            
-            <%= ff.input :quantity_type, :label => t("recipe.title.quantity_type"), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a, as: :select, :include_blank => false, input_class: false, input_html: {
+
+            <%= ff.input :quantity_type, :selected => f.object.recipe_quantity.quantity_type.id, :label => t("recipe.title.quantity_type"), collection: QuantityType.order(:name).all.map {|v| [v.name, v.id]}.to_a.unshift([t('recipe.title.no_quantity_type'), -1]), as: :select, :include_blank => false, input_class: false, input_html: {
               slimselect: true,
               slimselectNoResult: t('slimselect.quantity_type.no_result'),
               slimselectSearchPlaceholder: t('slimselect.quantity_type.placeholder'),
