--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -12,7 +12,7 @@
         Recipy est la première application intelligente qui permet de diversifier son alimentation tout en mangeant local.
       </p>
       <p class="uk-text-large uk-margin-medium-bottom">
-        <a class="uk-button uk-button-default uk-button-primary" href="/beta">Je veux cuisiner !</a>
+        <a class="uk-button uk-button-default uk-button-primary" href="/beta">Je veux manger !</a>
       </p>
       <div class="info uk-flex uk-flex-column uk-flex-middle">
         <a href="#concept" uk-scroll class="uk-visible@m">
